# gqlhunter

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  scope.example.yaml  scope.yaml
.github/workflows/: ci.yml
docs/: docker.md  examples.md  installation.md  notifications.md  scope.md
gqlhunter/: cli.py  dashboard.py
gqlhunter/analyzer/: risk.py
gqlhunter/auth/: auth_analyzer.py  session.py
gqlhunter/core/: db.py  http_client.py  scope.py
gqlhunter/discovery/: endpoint_discovery.py
gqlhunter/generator/: query_builder.py
gqlhunter/introspection/: introspection.py
gqlhunter/notify/: sender.py
gqlhunter/notify/templates/: slack.jinja  telegram.jinja  webhook.jinja
gqlhunter/report/: render.py  sarif.py
gqlhunter/schema/: parser.py
gqlhunter/variants/: variant_engine.py
screenshots/: dashboard.html  report.html  report.md
tests/: test_auth.py  test_dashboard.py  test_dashboard_unit.py  test_depth.py  test_diff.py  test_discovery.py  test_export.py  test_http_client.py  test_introspection.py  test_notify.py  test_parser.py  test_query_builder.py  test_report.py  test_risk.py  test_scope.py  test_session.py  test_session_cli.py  test_variants.py  test_variants_cli.py
