[project]
name = "gqlhunter"
version = "0.2.0"
description = "GraphQL recon & analysis CLI — schema discovery, risk classification, IDOR candidates"
authors = [
    { name = "bess1lie" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "aiosqlite>=0.20.0",
    "markdown>=3.6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.3.0", "respx>=0.21.0"]

[project.scripts]
gqlhunter = "gqlhunter.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
